fix responsive view & unusal overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,21 +112,18 @@ body {
   border-bottom: 2px solid #F6A39B;
 }
 
-.section-1,
-.section-2,
-.section-3 {
-  height: 100%;
+.section-1 {
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
-.section-1 .container,
-.section-2 .container,
-.section-3 .container {
-  height: 100%;
+.section-1 .container {
+  min-height: 100vh;
 }
 
 .section-1__row {
-  height: calc(100% - 100px);
-  height: -o-calc(100% - 100px);
+  height: calc(100vh - 100px);
+  height: -o-calc(100vh - 100px);
 }
 
 .section-1__row .col-md-6 {
@@ -225,9 +222,28 @@ body {
 
 .section-2 {
   background-color: #FDEBEC;
+  min-height: 100%;
 }
 
-.section-2__img {
+.section-2 .container {
+  min-height: 100vh;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+.section-2__row {
+  min-height: 100vh;
+}
+
+.section-2__row .col-md-6 {
+  min-height: 100%;
+}
+
+.section-2__row .col-md-6 .card {
+  min-height: 100%;
+}
+
+.section-2__content {
   max-width: 100%;
   height: auto;
   margin-top: auto;
